[package]
name = "pallet-babe"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Consensus extension module for BABE consensus. Collects on-chain randomness from VRF outputs and manages epoch transitions."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
pallet-authorship = { version = "4.0.0-dev", default-features = false, path = "../authorship" }
pallet-session = { version = "4.0.0-dev", default-features = false, path = "../session" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, path = "../timestamp" }
sp-application-crypto = { version = "4.0.0", default-features = false, path = "../../primitives/application-crypto" }
sp-consensus-babe = { version = "0.10.0-dev", default-features = false, path = "../../primitives/consensus/babe" }
sp-consensus-vrf = { version = "0.10.0-dev", default-features = false, path = "../../primitives/consensus/vrf" }
sp-io = { version = "4.0.0", default-features = false, path = "../../primitives/io" }
sp-core = { version = "4.1.0-dev", default-features = false, path = "../../primitives/core" }
sp-runtime = { version = "4.1.0-dev", default-features = false, path = "../../primitives/runtime" }
sp-session = { version = "4.0.0-dev", default-features = false, path = "../../primitives/session" }
sp-staking = { version = "4.0.0-dev", default-features = false, path = "../../primitives/staking" }
sp-std = { version = "4.0.0", default-features = false, path = "../../primitives/std" }
log = { version = "0.4.14", default-features = false }


pallet-staking = { version = "4.0.0-dev", path = "../staking", default-features = false, optional = true }
pallet-balances = { version = "4.0.0-dev", path = "../balances", default-features = false, optional = true }
frame-election-provider-support = { version = "4.0.0-dev", path = "../election-provider-support", default-features = false, optional = true }
pallet-staking-reward-curve = { version = "4.0.0-dev", path = "../staking/reward-curve", default-features = false, optional = true }
pallet-offences = { version = "4.0.0-dev", path = "../offences", default-features = false, optional = true }
sp-consensus-slots = { version = "0.10.0-dev", path = "../../primitives/consensus/slots", default-features = false, optional = true }

[dev-dependencies]
pallet-balances = { version = "4.0.0-dev", path = "../balances" }
pallet-session = { version = "4.0.0-dev", path = "../session" }
sp-core = { version = "4.1.0-dev", path = "../../primitives/core" }
sp-std = { version = "4.0.0", path = "../../primitives/std" }
sp-io = { version = "4.0.0", path = "../../primitives/io" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"sp-application-crypto/std",
	"sp-consensus-babe/std",
	"sp-consensus-vrf/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"log/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks",
"pallet-staking/runtime-benchmarks", "pallet-balances/runtime-benchmarks", "frame-election-provider-support/runtime-benchmarks", "pallet-staking-reward-curve",
"pallet-offences/runtime-benchmarks", "sp-runtime/runtime-benchmarks",
"sp-consensus-slots"]
try-runtime = ["frame-support/try-runtime"]
